crates/atlas-runtime/tests/corpus/pass/types/empty_array_annotations.atlas
let nums: number[] = [];
let strs: string[] = [];
let bools: bool[] = [];
let jsons: json[] = [];
let nested: number[][] = [];

print(len(nums));
print(len(strs));
print(len(bools));
print(len(jsons));
print(len(nested));
