crates/atlas-runtime/tests/corpus/fail/type_errors/array_concat_mismatch.atlas
let nums: number[] = [1, 2];
let words: string[] = ["a"]; 
let bad = nums + words;
print(bad);
